--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-	width: 1400px;
-	margin: 0 auto;
+	width: relative;
+	margin: 0 auto 100px;
 	border: 3px solid #3a4ceb;
 	background-color: #ffffff;
 }
@@ -95,7 +95,7 @@ header li a, .dropbtn {
 }
   
 header li a:hover, .dropdown:hover .dropbtn {
-	background-color: #3a4ceb;
+	background-color: #c2c3d1;
 }
   
 header li.dropdown {
@@ -123,6 +123,9 @@ header .dropdown-content a:hover {background-color: #f1f1f1;}
   
 header .dropdown:hover .dropdown-content {
 	display: block;
+}
+input[type=text], select, textarea {
+	resize: vertical;
 }
 /* the styles for the section */
 main {
